fix: footer alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1771,6 +1771,7 @@ html {
 
 .footer-right form {
   display: flex;
+  align-items: center;
   gap: 10px;
 }
 
